# micro-video-catalog

./: .gitignore  Dockerfile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/zsh/powerlevel10k/: .p10k.zsh
src/__seedwork/domain/: entities.py  exceptions.py  validators.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/integrations/domain/: test_int_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
uml/: class-diagram.wsd
uml/usecases/: category.usecase.wsd
