[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Iago Neres", email = "iagoneres@gmail.com"},
]
dependencies = [
    "autopep8>=1.6.0",
]
requires-python = ">=3.10.4"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
