[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Iago Neres", email = "iagoneres@gmail.com"},
]
dependencies = []
requires-python = ">=3.10.4"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.9",
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
